app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
@import "tailwindcss";

:root {
  --background: #0f0f0f;
  --foreground: #ffffff;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-inter: "Inter", "system-ui";
  --font-orbitron: "Orbitron";
}

html {
  scroll-behavior: smooth;
}

html, body {
  overflow-x: hidden;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Inter;
  overflow-x: hidden;
}

@layer utilities {
  .animate-slide {
    animation: slide 12s infinite;
  }

  @keyframes slide {
    0% {
      transform: translateY(0);
    }
    25% {
      transform: translateY(-25%);
    }
    50% {
      transform: translateY(-50%);
    }
    75% {
      transform: translateY(-75%);
    }
    80% {
      transform: translateY(-80%);
    }
    100% {
      transform: translateY(0);
    }
  }
}

.button-hover {
  @apply bg-gradient-to-r from-[#9b08d0] to-[#430375] transition-all ease-in-out duration-500;
}

.button-hover:hover {
  @apply bg-gradient-to-r from-[#430375] to-[#9b08d0];
}

